--- a/coursera-react-practise/src/index.css
+++ b/coursera-react-practise/src/index.css
@@ -8,8 +8,13 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: white;
+  background-color: rgba(241, 212, 180, 0.87);
+
+  width: 100%;
+  height: 100%;
+
+  display: block;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,10 +33,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
 
 h1 {
