--- a/coursera-react-practise/src/index.css
+++ b/coursera-react-practise/src/index.css
@@ -22,6 +22,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -33,6 +37,7 @@ a:hover {
 
 body {
   margin: 0;
+  padding-bottom: 24px;
   /* display: flex;
   place-items: center;
   min-width: 320px;
